2015-11-22  Araki Ken  <arakiken@users.sf.net>

	* x_font_cache.c: If size_attr > 0, x_font_cache_get_xfont() loads USASCII font
	  instead of a specified font which doesn't exist.

	* x_draw_str.c: draw_drcs() supports DOUBLE_{WIDTH|HEIGHT_TOP|HEIGHT_BOTTOM}.

	* ml_vt100_parser.c:
	  ESC - (designate CS96 single byte charset) is supported on utf8 encoding.

2015-11-21  Araki Ken  <arakiken@users.sf.net>

	* README.ja, man/mlterm.1: Updated.

	* doc/term: Removed.

2015-11-21  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: Mistake of revision 2510 commit is reverted.

2015-11-21  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: x_font_manager_set_size_attr() is called before x_get_font().

	* x_draw_str.c:
	  - If xfont->size_attr >= DOUBLE_HEIGHT_TOP, x_window_draw_{image}_string*()
	    aren't used.
	  - Drawing height and ascent is modified according to font_man->size_attr
	    in x_draw_str() and x_draw_str_to_eol().

	* x_font_manager.[ch]: x_font_manager_set_size_attr() is added.

	* x_functbl_{cairo|xft}.c, x_window_{cairo|xft}.c:
	  {xft|cairo}_{un}set_clip() are added.

	* x_type_loader.h: X_WINDOW_SET_CLIP and XWINDOW_UNSET_CLIP are added.

	* cocoa.m:
	  - setClip and unsetClip are added to MLTermView.
	  - view_set_clip() and view_unset_clip() are added.
	  - Glyph size is transformed according to x_font_t::size_attr.

	* x_window.h, fb/x_window.c, win32/x_window.c, xlib/x_window.c, quartz/x_window.c:
	  x_window_set_clip() and x_window_unset_clip() are added.

	* x_font.h, fb/x_font.c, win32/x_font.c, xlib/x_font.c, quartz/x_font.c:
	  - size_attr is added to x_font_t and to arguments of x_font_new().
	  - Large fonts are loaded according to size_attr.

	* ml_font.h: DOUBLE_WIDTH, DOUBLE_HEIGHT_TOP and DOUBLE_HEIGHT_BOTTOM are added.

	* ml_screen.h: ml_screen_clear_size_attr() is added.

	* ml_screen.c: size_attr of newly scrolled in line is reset in
	  receive_scrolled_out_line().

	* ml_edit.[ch]: ml_edit_clear_size_attr() is added.
